--- a/src/V2.Senac.GerenciamentoVeiculos.Api.WebApi/appsettings.Development.json
+++ b/src/V2.Senac.GerenciamentoVeiculos.Api.WebApi/appsettings.Development.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MyDddProjectDb_Dev;Trusted_Connection=true;MultipleActiveResultSets=true"
+    "DefaultConnection": "Host=localhost;Database=GerenciamentoVeiculosDb_Dev;Username=postgres;Password=yourpassword123;Port=5432",
+    "SqlServerConnection": "Server=(localdb)\\mssqllocaldb;Database=GerenciamentoVeiculosDb_Dev;Trusted_Connection=true;MultipleActiveResultSets=true"
   },
   "ApiSettings": {
     "EnableDetailedErrors": true,
