--- a/src/V2.Senac.GerenciamentoVeiculos.Api.WebApi/appsettings.json
+++ b/src/V2.Senac.GerenciamentoVeiculos.Api.WebApi/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MyDddProjectDb;Trusted_Connection=true;MultipleActiveResultSets=true"
+    "DefaultConnection": "Host=localhost;Database=GerenciamentoVeiculosDb;Username=postgres;Password=yourpassword123;Port=5432",
+    "SqlServerConnection": "Server=(localdb)\\mssqllocaldb;Database=GerenciamentoVeiculosDb;Trusted_Connection=true;MultipleActiveResultSets=true"
   },
   "ApiSettings": {
     "Title": "MyDddProject API",
