--- a/src/V2.Senac.GerenciamentoVeiculos.Api.Infrastructure/V2.Senac.GerenciamentoVeiculos.Api.Infrastructure.csproj
+++ b/src/V2.Senac.GerenciamentoVeiculos.Api.Infrastructure/V2.Senac.GerenciamentoVeiculos.Api.Infrastructure.csproj
@@ -6,7 +6,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.5" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0" />
+    <PackageReference Include="DotNetEnv" Version="3.1.1" />
   </ItemGroup>
 
   <PropertyGroup>
