--- a/src/V2.Senac.GerenciamentoVeiculos.Api.WebApi/V2.Senac.GerenciamentoVeiculos.Api.WebApi.csproj
+++ b/src/V2.Senac.GerenciamentoVeiculos.Api.WebApi/V2.Senac.GerenciamentoVeiculos.Api.WebApi.csproj
@@ -13,6 +13,9 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
